git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@15 67a09383-3dfa-4221-8551-890bac9c277c

--- a/test/fixtures/address_norm_items.yml
+++ b/test/fixtures/address_norm_items.yml
@@ -1,3 +1,27 @@
+# == Schema Information
+# Schema version: 20080819191919
+#
+# Table name: address_norm_items
+#
+#  id              :integer       not null, primary key
+#  contact_norm_id :integer       not null
+#  name            :string(255)   not null
+#  nature          :string(15)    default("content"), not null
+#  maxlength       :integer       default(38), not null
+#  content         :string(255)   
+#  left_nature     :string(15)    
+#  left_value      :string(63)    
+#  right_nature    :string(15)    default("space")
+#  right_value     :string(63)    
+#  position        :integer       
+#  company_id      :integer       not null
+#  created_at      :datetime      not null
+#  updated_at      :datetime      not null
+#  created_by      :integer       
+#  updated_by      :integer       
+#  lock_version    :integer       default(0), not null
+#
+
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
 # one:
