--- a/test/fixtures/bank_account_statements.yml
+++ b/test/fixtures/bank_account_statements.yml
@@ -1,3 +1,25 @@
+# == Schema Information
+# Schema version: 20080819191919
+#
+# Table name: bank_account_statements
+#
+#  id              :integer       not null, primary key
+#  bank_account_id :integer       not null
+#  started_on      :date          not null
+#  stopped_on      :date          not null
+#  printed_on      :date          not null
+#  intermediate    :boolean       not null
+#  number          :string(255)   not null
+#  debit           :decimal(16, 2 default(0.0), not null
+#  credit          :decimal(16, 2 default(0.0), not null
+#  company_id      :integer       not null
+#  created_at      :datetime      not null
+#  updated_at      :datetime      not null
+#  created_by      :integer       
+#  updated_by      :integer       
+#  lock_version    :integer       default(0), not null
+#
+
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
 # one:
