--- a/test/fixtures/journals.yml
+++ b/test/fixtures/journals.yml
@@ -1,3 +1,22 @@
+# == Schema Information
+# Schema version: 20080819191919
+#
+# Table name: journals
+#
+#  id             :integer       not null, primary key
+#  nature_id      :integer       not null
+#  name           :string(255)   not null
+#  code           :string(4)     not null
+#  counterpart_id :integer       
+#  closed_on      :date          not null
+#  company_id     :integer       not null
+#  created_at     :datetime      not null
+#  updated_at     :datetime      not null
+#  created_by     :integer       
+#  updated_by     :integer       
+#  lock_version   :integer       default(0), not null
+#
+
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
 # one:
