--- a/test/fixtures/templates.yml
+++ b/test/fixtures/templates.yml
@@ -1,3 +1,20 @@
+# == Schema Information
+# Schema version: 20080819191919
+#
+# Table name: templates
+#
+#  id           :integer       not null, primary key
+#  name         :string(255)   not null
+#  content      :text          not null
+#  cache        :text          
+#  company_id   :integer       not null
+#  created_at   :datetime      not null
+#  updated_at   :datetime      not null
+#  created_by   :integer       
+#  updated_by   :integer       
+#  lock_version :integer       default(0), not null
+#
+
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
 # one:
