git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@29 67a09383-3dfa-4221-8551-890bac9c277c

--- a/test/fixtures/companies.yml
+++ b/test/fixtures/companies.yml
@@ -6,7 +6,8 @@
 #  id           :integer       not null, primary key
 #  name         :string(255)   not null
 #  code         :string(8)     not null
-#  siren        :string(9)     default("000000000"), not null
+#  siren        :string(9)     
+#  born_on      :date          
 #  locked       :boolean       not null
 #  deleted      :boolean       not null
 #  created_at   :datetime      not null
