--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -7,9 +7,8 @@
 #  name            :string(32)    not null
 #  first_name      :string(255)   not null
 #  last_name       :string(255)   not null
-#  salt            :string(64)    not null
-#  hashed_password :string(64)    not null
-#  admin           :boolean       not null
+#  salt            :string(64)    
+#  hashed_password :string(64)    
 #  locked          :boolean       not null
 #  deleted         :boolean       not null
 #  email           :string(255)   
