git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@132 67a09383-3dfa-4221-8551-890bac9c277c

--- a/test/fixtures/widgets.yml
+++ b/test/fixtures/widgets.yml
@@ -1,3 +1,22 @@
+# == Schema Information
+# Schema version: 20080819191919
+#
+# Table name: widgets
+#
+#  id           :integer       not null, primary key
+#  name         :string(255)   not null
+#  location     :string(255)   not null
+#  nature       :string(255)   not null
+#  options      :text          
+#  position     :integer       
+#  company_id   :integer       not null
+#  created_at   :datetime      not null
+#  updated_at   :datetime      not null
+#  created_by   :integer       
+#  updated_by   :integer       
+#  lock_version :integer       default(0), not null
+#
+
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
 # one:
