git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@135 67a09383-3dfa-4221-8551-890bac9c277c

--- a/test/fixtures/locations.yml
+++ b/test/fixtures/locations.yml
@@ -1,15 +1,10 @@
 # == Schema Information
 # Schema version: 20080819191919
 #
-# Table name: widgets
+# Table name: locations
 #
 #  id           :integer       not null, primary key
 #  name         :string(255)   not null
-#  nature       :string(255)   not null
-#  options      :text          
-#  position     :integer       
-#  location_id  :integer       not null
-#  company_id   :integer       not null
 #  created_at   :datetime      not null
 #  updated_at   :datetime      not null
 #  created_by   :integer       
