git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@282 67a09383-3dfa-4221-8551-890bac9c277c

--- a/test/fixtures/financialyears.yml
+++ b/test/fixtures/financialyears.yml
@@ -8,7 +8,7 @@
 #  closed       :boolean       not null
 #  started_on   :date          not null
 #  stopped_on   :date          not null
-#  written_on   :date          not null
+#  written_on   :date          
 #  company_id   :integer       not null
 #  created_at   :datetime      not null
 #  updated_at   :datetime      not null
