git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@292 67a09383-3dfa-4221-8551-890bac9c277c

--- a/test/fixtures/shelves.yml
+++ b/test/fixtures/shelves.yml
@@ -7,7 +7,7 @@
 #  name                :string(255)   not null
 #  catalog_name        :string(255)   not null
 #  catalog_description :text          
-#  description         :text          
+#  comment             :text          
 #  parent_id           :integer       
 #  company_id          :integer       not null
 #  created_at          :datetime      not null
