--- a/test/fixtures/journals.yml
+++ b/test/fixtures/journals.yml
@@ -8,6 +8,7 @@
 #  name           :string(255)   not null
 #  code           :string(4)     not null
 #  deleted        :boolean       not null
+#  currency_id    :integer       not null
 #  counterpart_id :integer       
 #  closed_on      :date          default(Jeu, 31 Déc 1970), not null
 #  company_id     :integer       not null
