--- a/config/database.yml
+++ b/config/database.yml
@@ -12,6 +12,7 @@ development:
   adapter: postgresql
   encoding: unicode
   database: ekylibre_development
+  pool: 5
   username: rails
   password: R4|L5
 
@@ -37,6 +38,7 @@ test:
   adapter: postgresql
   encoding: unicode
   database: ekylibre_test
+  pool: 5
   username: rails
   password:
 
@@ -44,5 +46,6 @@ production:
   adapter: postgresql
   encoding: unicode
   database: ekylibre_production
+  pool: 5
   username: rails
   password:
