git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@350 67a09383-3dfa-4221-8551-890bac9c277c

--- a/test/fixtures/journals.yml
+++ b/test/fixtures/journals.yml
@@ -10,7 +10,7 @@
 #  deleted        :boolean       not null
 #  currency_id    :integer       not null
 #  counterpart_id :integer       
-#  closed_on      :date          default(Jeu, 31 Déc 1970), not null
+#  closed_on      :date          not null
 #  company_id     :integer       not null
 #  created_at     :datetime      not null
 #  updated_at     :datetime      not null
