git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@374 67a09383-3dfa-4221-8551-890bac9c277c

--- a/test/fixtures/sale_orders.yml
+++ b/test/fixtures/sale_orders.yml
@@ -6,6 +6,7 @@
 #  id                  :integer       not null, primary key
 #  client_id           :integer       not null
 #  nature_id           :integer       not null
+#  created_on          :date          not null
 #  number              :string(64)    not null
 #  invoiced            :boolean       not null
 #  amount              :decimal(16, 2 default(0.0), not null
