git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@507 67a09383-3dfa-4221-8551-890bac9c277c

--- a/test/fixtures/contacts.yml
+++ b/test/fixtures/contacts.yml
@@ -31,6 +31,7 @@
 #  created_by    :integer       
 #  updated_by    :integer       
 #  lock_version  :integer       default(0), not null
+#  country       :string(2)     
 #
 
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
