--- a/test/fixtures/entities.yml
+++ b/test/fixtures/entities.yml
@@ -3,34 +3,40 @@
 #
 # Table name: entities
 #
-#  id                   :integer       not null, primary key
-#  nature_id            :integer       not null
-#  language_id          :integer       not null
-#  name                 :string(255)   not null
-#  first_name           :string(255)   
-#  full_name            :string(255)   not null
-#  code                 :string(16)    
-#  active               :boolean       default(TRUE), not null
-#  born_on              :date          
-#  dead_on              :date          
-#  ean13                :string(13)    
-#  soundex              :string(4)     
-#  website              :string(255)   
-#  client               :boolean       not null
-#  supplier             :boolean       not null
-#  company_id           :integer       not null
-#  created_at           :datetime      not null
-#  updated_at           :datetime      not null
-#  created_by           :integer       
-#  updated_by           :integer       
-#  lock_version         :integer       default(0), not null
-#  client_account_id    :integer       
-#  supplier_account_id  :integer       
-#  tva_submissive       :boolean       default(TRUE), not null
-#  rate_discount        :decimal(4, 2) 
-#  comment              :text          
-#  reflation_submissive :boolean       not null
-#  accises              :string(15)    
+#  id                    :integer       not null, primary key
+#  nature_id             :integer       not null
+#  language_id           :integer       not null
+#  name                  :string(255)   not null
+#  first_name            :string(255)   
+#  full_name             :string(255)   not null
+#  code                  :string(16)    
+#  active                :boolean       default(TRUE), not null
+#  born_on               :date          
+#  dead_on               :date          
+#  ean13                 :string(13)    
+#  soundex               :string(4)     
+#  website               :string(255)   
+#  client                :boolean       not null
+#  supplier              :boolean       not null
+#  company_id            :integer       not null
+#  created_at            :datetime      not null
+#  updated_at            :datetime      not null
+#  created_by            :integer       
+#  updated_by            :integer       
+#  lock_version          :integer       default(0), not null
+#  client_account_id     :integer       
+#  supplier_account_id   :integer       
+#  vat_submissive        :boolean       default(TRUE), not null
+#  reflation_submissive  :boolean       not null
+#  deliveries_conditions :string(60)    
+#  discount_rate         :decimal(8, 2) 
+#  reduction_rate        :decimal(8, 2) 
+#  comment               :text          
+#  excise                :string(15)    
+#  vat_number            :string(15)    
+#  country               :string(2)     
+#  payments_number       :integer       
+#  employee_id           :integer       
 #
 
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
