--- a/config/database.yml
+++ b/config/database.yml
@@ -35,9 +35,9 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: postgresql
+  adapter: sqlite3
   encoding: unicode
-  database: ekylibre_test
+  database: db/ekylibre_test.sqlite3
   pool: 5
   username: rails
   password:
