--- a/test/fixtures/stock_moves.yml
+++ b/test/fixtures/stock_moves.yml
@@ -24,6 +24,8 @@
 #  virtual            :boolean       
 #  input              :boolean       
 #  generated          :boolean       
+#  origin_type        :string(255)   
+#  origin_id          :integer       
 #
 
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
