--- a/test/fixtures/journal_records.yml
+++ b/test/fixtures/journal_records.yml
@@ -1,26 +1,27 @@
 # == Schema Information
-# Schema version: 20090512102847
+# Schema version: 20090520140946
 #
 # Table name: journal_records
 #
-#  id            :integer       not null, primary key
-#  resource_id   :integer       
-#  resource_type :string(255)   
-#  created_on    :date          not null
-#  printed_on    :date          not null
-#  number        :string(255)   not null
-#  status        :string(1)     default("A"), not null
-#  debit         :decimal(16, 2 default(0.0), not null
-#  credit        :decimal(16, 2 default(0.0), not null
-#  position      :integer       not null
-#  period_id     :integer       not null
-#  journal_id    :integer       not null
-#  company_id    :integer       not null
-#  created_at    :datetime      not null
-#  updated_at    :datetime      not null
-#  created_by    :integer       
-#  updated_by    :integer       
-#  lock_version  :integer       default(0), not null
+#  id               :integer       not null, primary key
+#  resource_id      :integer       
+#  resource_type    :string(255)   
+#  created_on       :date          not null
+#  printed_on       :date          not null
+#  number           :string(255)   not null
+#  status           :string(1)     default("A"), not null
+#  debit            :decimal(16, 2 default(0.0), not null
+#  credit           :decimal(16, 2 default(0.0), not null
+#  position         :integer       not null
+#  journal_id       :integer       not null
+#  company_id       :integer       not null
+#  created_at       :datetime      not null
+#  updated_at       :datetime      not null
+#  created_by       :integer       
+#  updated_by       :integer       
+#  lock_version     :integer       default(0), not null
+#  closed           :boolean       
+#  financialyear_id :integer       
 #
 
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
