git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@792 67a09383-3dfa-4221-8551-890bac9c277c

--- a/test/fixtures/entity_categories.yml
+++ b/test/fixtures/entity_categories.yml
@@ -13,6 +13,7 @@
 #  created_by   :integer       
 #  updated_by   :integer       
 #  lock_version :integer       default(0), not null
+#  code         :string(8)     
 #
 
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
