--- a/test/fixtures/payments.yml
+++ b/test/fixtures/payments.yml
@@ -18,6 +18,7 @@
 #  check_number   :string(255)   
 #  account_number :string(255)   
 #  entity_id      :integer       
+#  to_bank_on     :date          default(Tue, 16 Jun 2009), not null
 #
 
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
