--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -21,6 +21,7 @@
 #  lock_version      :integer       default(0), not null
 #  free_price        :boolean       default(TRUE), not null
 #  reduction_percent :decimal(, )   default(5.0), not null
+#  credits           :boolean       default(TRUE), not null
 #
 
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
