--- a/test/fixtures/invoice_lines.yml
+++ b/test/fixtures/invoice_lines.yml
@@ -17,6 +17,7 @@
 #  updated_by        :integer       
 #  lock_version      :integer       default(0), not null
 #  invoice_id        :integer       
+#  origin_id         :integer       
 #
 
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
