git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@797 67a09383-3dfa-4221-8551-890bac9c277c

--- a/test/fixtures/bank_accounts.yml
+++ b/test/fixtures/bank_accounts.yml
@@ -23,6 +23,7 @@
 #  number       :string(255)   
 #  key          :string(255)   
 #  mode         :string(255)   default("IBAN"), not null
+#  address      :text          
 #
 
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
