--- a/test/fixtures/payments.yml
+++ b/test/fixtures/payments.yml
@@ -18,7 +18,9 @@
 #  check_number   :string(255)   
 #  account_number :string(255)   
 #  entity_id      :integer       
-#  to_bank_on     :date          default(Tue, 16 Jun 2009), not null
+#  to_bank_on     :date          default(Thu, 18 Jun 2009), not null
+#  embankment_id  :integer       
+#  embanker_id    :integer       
 #
 
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
