--- a/test/fixtures/bank_accounts.yml
+++ b/test/fixtures/bank_accounts.yml
@@ -24,6 +24,7 @@
 #  key          :string(255)   
 #  mode         :string(255)   default("IBAN"), not null
 #  address      :text          
+#  bank_name    :string(50)    
 #
 
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
