--- a/test/fixtures/roles.yml
+++ b/test/fixtures/roles.yml
@@ -4,13 +4,13 @@
 #
 #  id           :integer       not null, primary key
 #  name         :string(255)   not null
-#  actions      :text          
 #  company_id   :integer       not null
 #  created_at   :datetime      not null
 #  updated_at   :datetime      not null
 #  created_by   :integer       
 #  updated_by   :integer       
 #  lock_version :integer       default(0), not null
+#  rights       :text          
 #
 
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
