--- a/test/fixtures/languages.yml
+++ b/test/fixtures/languages.yml
@@ -7,6 +7,7 @@
 #  native_name :string(255)   not null
 #  iso2        :string(2)     not null
 #  iso3        :string(3)     not null
+#  company_id  :integer       
 #
 
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
