git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@869 67a09383-3dfa-4221-8551-890bac9c277c

--- a/test/fixtures/price_taxes.yml
+++ b/test/fixtures/price_taxes.yml
@@ -11,6 +11,7 @@
 #  created_by   :integer       
 #  updated_by   :integer       
 #  lock_version :integer       default(0), not null
+#  company_id   :integer       not null
 #
 
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
