git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@911 67a09383-3dfa-4221-8551-890bac9c277c

--- a/test/fixtures/bank_accounts.yml
+++ b/test/fixtures/bank_accounts.yml
@@ -25,6 +25,7 @@
 #  mode         :string(255)   default("IBAN"), not null
 #  address      :text          
 #  bank_name    :string(50)    
+#  default      :boolean       not null
 #
 
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
