git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@914 67a09383-3dfa-4221-8551-890bac9c277c

--- a/test/fixtures/entities.yml
+++ b/test/fixtures/entities.yml
@@ -43,6 +43,7 @@
 #  origin_id             :integer       
 #  first_met_on          :date          
 #  category_id           :integer       
+#  siren                 :string(9)     
 #
 
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
