git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@936 67a09383-3dfa-4221-8551-890bac9c277c

--- a/test/fixtures/companies.yml
+++ b/test/fixtures/companies.yml
@@ -2,18 +2,19 @@
 #
 # Table name: companies
 #
-#  id           :integer       not null, primary key
-#  name         :string(255)   not null
-#  code         :string(8)     not null
-#  born_on      :date          
-#  locked       :boolean       not null
-#  deleted      :boolean       not null
-#  created_at   :datetime      not null
-#  updated_at   :datetime      not null
-#  lock_version :integer       default(0), not null
-#  entity_id    :integer       
-#  creator_id   :integer       
-#  updater_id   :integer       
+#  id                  :integer       not null, primary key
+#  name                :string(255)   not null
+#  code                :string(8)     not null
+#  born_on             :date          
+#  locked              :boolean       not null
+#  deleted             :boolean       not null
+#  created_at          :datetime      not null
+#  updated_at          :datetime      not null
+#  lock_version        :integer       default(0), not null
+#  entity_id           :integer       
+#  invoice_sequence_id :integer       
+#  creator_id          :integer       
+#  updater_id          :integer       
 #
 
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
