--- a/test/fixtures/entity_links.yml
+++ b/test/fixtures/entity_links.yml
@@ -1,16 +1,18 @@
 # == Schema Information
 #
-# Table name: entity_link_natures
+# Table name: entity_links
 #
+#  comment      :text          
 #  company_id   :integer       not null
 #  created_at   :datetime      not null
 #  creator_id   :integer       
+#  entity1_id   :integer       not null
+#  entity2_id   :integer       not null
 #  id           :integer       not null, primary key
 #  lock_version :integer       default(0), not null
-#  name         :string(255)   not null
-#  name_1_to_2  :string(255)   
-#  name_2_to_1  :string(255)   
-#  symmetric    :boolean       not null
+#  nature_id    :integer       not null
+#  started_on   :date          
+#  stopped_on   :date          
 #  updated_at   :datetime      not null
 #  updater_id   :integer       
 #
