git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1006 67a09383-3dfa-4221-8551-890bac9c277c

--- a/test/fixtures/entities.yml
+++ b/test/fixtures/entities.yml
@@ -28,7 +28,7 @@
 #  lock_version          :integer       default(0), not null
 #  name                  :string(255)   not null
 #  nature_id             :integer       not null
-#  origin                :string(255)   
+#  origin_id             :integer       
 #  payment_delay_id      :integer       
 #  payment_mode_id       :integer       
 #  payments_number       :integer       
