git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1026 67a09383-3dfa-4221-8551-890bac9c277c

--- a/test/fixtures/invoices.yml
+++ b/test/fixtures/invoices.yml
@@ -2,29 +2,30 @@
 #
 # Table name: invoices
 #
-#  amount            :decimal(16, 2 default(0.0), not null
-#  amount_with_taxes :decimal(16, 2 default(0.0), not null
-#  client_id         :integer       not null
-#  company_id        :integer       not null
-#  contact_id        :integer       not null
-#  created_at        :datetime      not null
-#  created_on        :date          
-#  creator_id        :integer       
-#  credit            :boolean       not null
-#  downpayment_price :decimal(16, 2 default(0.0), not null
-#  has_downpayment   :boolean       not null
-#  id                :integer       not null, primary key
-#  lock_version      :integer       default(0), not null
-#  lost              :boolean       not null
-#  nature            :string(1)     not null
-#  number            :string(64)    not null
-#  origin_id         :integer       
-#  paid              :boolean       not null
-#  payment_delay_id  :integer       not null
-#  payment_on        :date          not null
-#  sale_order_id     :integer       
-#  updated_at        :datetime      not null
-#  updater_id        :integer       
+#  amount             :decimal(16, 2 default(0.0), not null
+#  amount_with_taxes  :decimal(16, 2 default(0.0), not null
+#  annotation         :text          
+#  client_id          :integer       not null
+#  company_id         :integer       not null
+#  contact_id         :integer       
+#  created_at         :datetime      not null
+#  created_on         :date          
+#  creator_id         :integer       
+#  credit             :boolean       not null
+#  downpayment_amount :decimal(16, 2 default(0.0), not null
+#  has_downpayment    :boolean       not null
+#  id                 :integer       not null, primary key
+#  lock_version       :integer       default(0), not null
+#  lost               :boolean       not null
+#  nature             :string(1)     not null
+#  number             :string(64)    not null
+#  origin_id          :integer       
+#  paid               :boolean       not null
+#  payment_delay_id   :integer       not null
+#  payment_on         :date          not null
+#  sale_order_id      :integer       
+#  updated_at         :datetime      not null
+#  updater_id         :integer       
 #
 
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
