--- a/test/fixtures/invoice_lines.yml
+++ b/test/fixtures/invoice_lines.yml
@@ -4,13 +4,14 @@
 #
 #  amount            :decimal(16, 2 default(0.0), not null
 #  amount_with_taxes :decimal(16, 2 default(0.0), not null
+#  annotation        :text          
 #  company_id        :integer       not null
 #  created_at        :datetime      not null
 #  creator_id        :integer       
 #  id                :integer       not null, primary key
 #  invoice_id        :integer       
 #  lock_version      :integer       default(0), not null
-#  order_line_id     :integer       not null
+#  order_line_id     :integer       
 #  origin_id         :integer       
 #  position          :integer       
 #  price_id          :integer       not null
