--- a/test/fixtures/payment_modes.yml
+++ b/test/fixtures/payment_modes.yml
@@ -2,17 +2,18 @@
 #
 # Table name: payment_modes
 #
-#  account_id   :integer       
-#  company_id   :integer       not null
-#  created_at   :datetime      not null
-#  creator_id   :integer       
-#  id           :integer       not null, primary key
-#  lock_version :integer       default(0), not null
-#  mode         :string(5)     
-#  name         :string(50)    not null
-#  nature       :string(1)     default("U"), not null
-#  updated_at   :datetime      not null
-#  updater_id   :integer       
+#  account_id      :integer       
+#  bank_account_id :integer       
+#  company_id      :integer       not null
+#  created_at      :datetime      not null
+#  creator_id      :integer       
+#  id              :integer       not null, primary key
+#  lock_version    :integer       default(0), not null
+#  mode            :string(5)     
+#  name            :string(50)    not null
+#  nature          :string(1)     default("U"), not null
+#  updated_at      :datetime      not null
+#  updater_id      :integer       
 #
 
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
