--- a/test/fixtures/payment_parts.yml
+++ b/test/fixtures/payment_parts.yml
@@ -6,9 +6,11 @@
 #  company_id   :integer       not null
 #  created_at   :datetime      not null
 #  creator_id   :integer       
+#  downpayment  :boolean       not null
 #  id           :integer       not null, primary key
+#  invoice_id   :integer       
 #  lock_version :integer       default(0), not null
-#  order_id     :integer       not null
+#  order_id     :integer       
 #  payment_id   :integer       not null
 #  updated_at   :datetime      not null
 #  updater_id   :integer       
