--- a/test/fixtures/subscriptions.yml
+++ b/test/fixtures/subscriptions.yml
@@ -6,14 +6,19 @@
 #  contact_id    :integer       not null
 #  created_at    :datetime      not null
 #  creator_id    :integer       
-#  finished_on   :date          
+#  entity_id     :integer       
 #  first_number  :integer       
 #  id            :integer       not null, primary key
+#  invoice_id    :integer       
 #  last_number   :integer       
 #  lock_version  :integer       default(0), not null
+#  nature_id     :integer       
 #  product_id    :integer       not null
+#  quantity      :decimal(, )   
 #  sale_order_id :integer       
 #  started_on    :date          
+#  stopped_on    :date          
+#  suspended     :boolean       not null
 #  updated_at    :datetime      not null
 #  updater_id    :integer       
 #
