--- a/test/fixtures/document_templates.yml
+++ b/test/fixtures/document_templates.yml
@@ -1,16 +1,19 @@
 # == Schema Information
 #
-# Table name: print_templates
+# Table name: document_templates
 #
+#  active       :boolean       not null
 #  cache        :text          
 #  company_id   :integer       not null
-#  country      :string(8)     
+#  country      :string(2)     
 #  created_at   :datetime      not null
 #  creator_id   :integer       
+#  deleted      :boolean       not null
 #  id           :integer       not null, primary key
 #  language_id  :integer       
 #  lock_version :integer       default(0), not null
 #  name         :string(255)   not null
+#  nature_id    :integer       not null
 #  source       :text          
 #  updated_at   :datetime      not null
 #  updater_id   :integer       
