git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1086 67a09383-3dfa-4221-8551-890bac9c277c

--- a/test/fixtures/companies.yml
+++ b/test/fixtures/companies.yml
@@ -2,18 +2,19 @@
 #
 # Table name: companies
 #
-#  born_on      :date          
-#  code         :string(8)     not null
-#  created_at   :datetime      not null
-#  creator_id   :integer       
-#  deleted      :boolean       not null
-#  entity_id    :integer       
-#  id           :integer       not null, primary key
-#  lock_version :integer       default(0), not null
-#  locked       :boolean       not null
-#  name         :string(255)   not null
-#  updated_at   :datetime      not null
-#  updater_id   :integer       
+#  born_on          :date          
+#  code             :string(8)     not null
+#  created_at       :datetime      not null
+#  creator_id       :integer       
+#  deleted          :boolean       not null
+#  entity_id        :integer       
+#  id               :integer       not null, primary key
+#  lock_version     :integer       default(0), not null
+#  locked           :boolean       not null
+#  name             :string(255)   not null
+#  sales_conditions :text          
+#  updated_at       :datetime      not null
+#  updater_id       :integer       
 #
 
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
