--- a/test/fixtures/sale_order_lines.yml
+++ b/test/fixtures/sale_order_lines.yml
@@ -2,28 +2,29 @@
 #
 # Table name: sale_order_lines
 #
-#  account_id        :integer       not null
-#  amount            :decimal(16, 2 default(0.0), not null
-#  amount_with_taxes :decimal(16, 2 default(0.0), not null
-#  annotation        :text          
-#  company_id        :integer       not null
-#  created_at        :datetime      not null
-#  creator_id        :integer       
-#  entity_id         :integer       
-#  id                :integer       not null, primary key
-#  invoiced          :boolean       not null
-#  location_id       :integer       
-#  lock_version      :integer       default(0), not null
-#  order_id          :integer       not null
-#  position          :integer       
-#  price_amount      :decimal(16, 2 
-#  price_id          :integer       not null
-#  product_id        :integer       not null
-#  quantity          :decimal(16, 2 default(1.0), not null
-#  tax_id            :integer       
-#  unit_id           :integer       not null
-#  updated_at        :datetime      not null
-#  updater_id        :integer       
+#  account_id          :integer       not null
+#  amount              :decimal(16, 2 default(0.0), not null
+#  amount_with_taxes   :decimal(16, 2 default(0.0), not null
+#  annotation          :text          
+#  company_id          :integer       not null
+#  created_at          :datetime      not null
+#  creator_id          :integer       
+#  entity_id           :integer       
+#  id                  :integer       not null, primary key
+#  invoiced            :boolean       not null
+#  location_id         :integer       
+#  lock_version        :integer       default(0), not null
+#  order_id            :integer       not null
+#  position            :integer       
+#  price_amount        :decimal(16, 2 
+#  price_id            :integer       not null
+#  product_id          :integer       not null
+#  quantity            :decimal(16, 2 default(1.0), not null
+#  reduction_origin_id :integer       
+#  tax_id              :integer       
+#  unit_id             :integer       not null
+#  updated_at          :datetime      not null
+#  updater_id          :integer       
 #
 
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
