--- a/test/fixtures/sale_order_lines.yml
+++ b/test/fixtures/sale_order_lines.yml
@@ -12,6 +12,7 @@
 #  entity_id           :integer       
 #  id                  :integer       not null, primary key
 #  invoiced            :boolean       not null
+#  label               :text          
 #  location_id         :integer       
 #  lock_version        :integer       default(0), not null
 #  order_id            :integer       not null
