Adds some test files and renames bad actions
git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1163 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/database.yml
+++ b/config/database.yml
@@ -37,7 +37,7 @@ development:
 test:
   adapter: sqlite3
   encoding: unicode
-  database: db/ekylibre_test.sqlite3
+  database: db/data/test.sqlite3
   pool: 5
   username: rails
   password:
