--- a/test/fixtures/mandates.yml
+++ b/test/fixtures/mandates.yml
@@ -1,22 +1,20 @@
 # == Schema Information
 #
-# Table name: meeting_modes
+# Table name: mandates
 #
-#  active       :boolean       
 #  company_id   :integer       not null
 #  created_at   :datetime      not null
 #  creator_id   :integer       
+#  entity_id    :integer       not null
+#  family       :string(255)   not null
 #  id           :integer       not null, primary key
 #  lock_version :integer       default(0), not null
-#  name         :string(255)   not null
+#  organization :string(255)   not null
+#  started_on   :date          
+#  stopped_on   :date          
+#  title        :string(255)   not null
 #  updated_at   :datetime      not null
 #  updater_id   :integer       
 #
 
-# Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
-
-# one:
-#   column: value
-#
-# two:
-#   column: value
+# Generated
