--- a/test/fixtures/professions.yml
+++ b/test/fixtures/professions.yml
@@ -1,23 +1,18 @@
 # == Schema Information
 #
-# Table name: meeting_locations
+# Table name: professions
 #
-#  active       :boolean       
+#  code         :string(255)   
+#  commercial   :boolean       
 #  company_id   :integer       not null
 #  created_at   :datetime      not null
 #  creator_id   :integer       
-#  description  :text          
 #  id           :integer       not null, primary key
 #  lock_version :integer       default(0), not null
 #  name         :string(255)   not null
+#  rome         :string(255)   
 #  updated_at   :datetime      not null
 #  updater_id   :integer       
 #
 
-# Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
-
-# one:
-#   column: value
-#
-# two:
-#   column: value
+# Generated
