--- a/test/fixtures/units.yml
+++ b/test/fixtures/units.yml
@@ -17,8 +17,12 @@
 
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
-# one:
-#   column: value
-#
-# two:
-#   column: value
+kilo:
+  id: 1
+  company_id: 1
+  label: Kilo
+  name: kg
+  quantity: 1000
+  base: g
+  created_at: <%= Time.now %>
+  updated_at: <%= Time.now %>
