improve products search, begin to implement transports
git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1193 67a09383-3dfa-4221-8551-890bac9c277c

--- a/test/fixtures/deliveries.yml
+++ b/test/fixtures/deliveries.yml
@@ -17,8 +17,10 @@
 #  moved_on          :date          
 #  order_id          :integer       not null
 #  planned_on        :date          
+#  transport_id      :integer       
 #  updated_at        :datetime      not null
 #  updater_id        :integer       
+#  weight            :decimal(, )   
 #
 
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
