--- a/test/fixtures/tool_uses.yml
+++ b/test/fixtures/tool_uses.yml
@@ -1,3 +1,18 @@
+# == Schema Information
+#
+# Table name: tool_uses
+#
+#  company_id         :integer       not null
+#  created_at         :datetime      not null
+#  creator_id         :integer       
+#  id                 :integer       not null, primary key
+#  lock_version       :integer       default(0), not null
+#  shape_operation_id :integer       not null
+#  tool_id            :integer       not null
+#  updated_at         :datetime      not null
+#  updater_id         :integer       
+#
+
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
 # one:
