Change translation of shape_operation in french and revise tracking migration
git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1347 67a09383-3dfa-4221-8551-890bac9c277c

--- a/test/fixtures/shape_operation_lines.yml
+++ b/test/fixtures/shape_operation_lines.yml
@@ -2,15 +2,18 @@
 #
 # Table name: shape_operation_lines
 #
+#  area_unit_id       :integer       
 #  company_id         :integer       not null
 #  created_at         :datetime      not null
 #  creator_id         :integer       
 #  id                 :integer       not null, primary key
 #  lock_version       :integer       default(0), not null
 #  product_id         :integer       
-#  quantity           :decimal(, )   
+#  product_unit_id    :integer       
+#  quantity           :decimal(, )   default(0.0), not null
 #  shape_operation_id :integer       not null
-#  surface_unit_id    :integer       
+#  tracking_id        :integer       
+#  unit_quantity      :decimal(, )   default(0.0), not null
 #  updated_at         :datetime      not null
 #  updater_id         :integer       
 #
