Add port configuration in mysql conf
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1376 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/database.mysql.yml
+++ b/config/database.mysql.yml
@@ -23,6 +23,7 @@ development:
   username: __username__
   password: __password__
   host: localhost
+  port: 3306
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -36,6 +37,7 @@ test:
   username: __username__
   password: __password__
   host: localhost
+  port: 3306
 
 production:
   adapter: mysql
@@ -46,3 +48,4 @@ production:
   username: __username__
   password: __password__
   host: localhost
+  port: 3306
