Finish tracking process. Need tests to check all the results.
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1388 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/rights.conf
+++ b/config/rights.conf
@@ -192,7 +192,10 @@ management       statistics                       consult_sales
 management       stocks                           consult_stocks
 management       stocks_dyta                      consult_stocks
 management       tracking                         consult_tracking
+management       tracking_operation_lines_dyta    consult_tracking
 management       tracking_purchase_order_lines_dyta consult_tracking
+management       tracking_sale_order_lines_dyta   consult_tracking
+management       tracking_stocks_dyta             consult_tracking
 management       clients_dyli                     create_estimates
 management       price_find                       create_estimates
 management       sale_order_contacts              create_estimates
@@ -254,6 +257,14 @@ management       payment_update                   manage_invoicing
 management       payments                         manage_invoicing
 management       sale_order_payment_parts_dyta    manage_invoicing
 management       sale_order_summary               manage_invoicing
+management       location                         manage_locations
+management       location_create                  manage_locations
+management       location_delete                  manage_locations
+management       location_stock_moves_dyta        manage_locations
+management       location_stocks_dyta             manage_locations
+management       location_update                  manage_locations
+management       locations                        manage_locations
+management       locations_dyta                   manage_locations
 management       deliveries_dyta                  manage_orders
 management       delivery_contacts_dyli           manage_orders
 management       delivery_delete                  manage_orders
@@ -282,6 +293,7 @@ management       product_components_dyta          manage_products
 management       product_create                   manage_products
 management       product_delete                   manage_products
 management       product_prices_dyta              manage_products
+management       product_stock_moves_dyta         manage_products
 management       product_stocks_dyta              manage_products
 management       product_update                   manage_products
 management       products_dyta                    manage_products
@@ -297,14 +309,6 @@ management       shelf_products_dyta              manage_shelves
 management       shelf_update                     manage_shelves
 management       shelves                          manage_shelves
 management       shelves_dyta                     manage_shelves
-management       stock_location                   manage_stock_locations
-management       stock_location_create            manage_stock_locations
-management       stock_location_delete            manage_stock_locations
-management       stock_location_stock_moves_dyta  manage_stock_locations
-management       stock_location_stocks_dyta       manage_stock_locations
-management       stock_location_update            manage_stock_locations
-management       stock_locations                  manage_stock_locations
-management       stock_locations_dyta             manage_stock_locations
 management       stock_move_create                manage_stock_moves
 management       stock_move_delete                manage_stock_moves
 management       stock_move_update                manage_stock_moves
