--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -56,8 +56,18 @@
 
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
-# one:
-#   column: value
-#
-# two:
-#   column: value
+users_001:
+  admin: true
+  id: 1
+  employed: true
+  first_name: Mikawel
+  last_name: Makinous
+  name: mikmak
+  language_id: 1
+  locked: false 
+  role_id: 1
+  company_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  updated_at: 2006-07-19 19:13:59 +02:00
+  updater_id: 1
