--- a/test/fixtures/journal_entries.yml
+++ b/test/fixtures/journal_entries.yml
@@ -18,7 +18,7 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see http://www.gnu.org/licenses.
 # 
-# == Table: entries
+# == Table: journal_entries
 #
 #  account_id      :integer          not null
 #  comment         :text             
@@ -36,6 +36,7 @@
 #  expired_on      :date             
 #  id              :integer          not null, primary key
 #  intermediate_id :integer          
+#  journal_id      :integer          
 #  letter          :string(8)        
 #  lock_version    :integer          default(0), not null
 #  name            :string(255)      not null
@@ -46,10 +47,16 @@
 #  updater_id      :integer          
 #
 
-# Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
-
-# one:
-#   column: value
-#
-# two:
-#   column: value
+# Bad entry with null debit AND credit
+entry_1:
+  account_id: 1
+  company_id: 1
+  currency_id: 1
+  currency_rate: 1
+  draft: false
+  id: 1
+  journal_id: 1
+  name: 'My first journal entry'
+  record_id: 1
+  debit: 0
+  credit: 0
