--- a/config/rights.conf
+++ b/config/rights.conf
@@ -45,6 +45,7 @@ accountancy      financialyear_update             manage_financialyears
 accountancy      financialyears                   manage_financialyears
 accountancy      financialyears_dyta              manage_financialyears
 accountancy      financialyears_records           manage_financialyears
+accountancy      journal                          manage_journals
 accountancy      journal_close                    manage_journals
 accountancy      journal_create                   manage_journals
 accountancy      journal_delete                   manage_journals
