Add evolution #98 which permit to reopen a closed journal
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1434 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/rights.conf
+++ b/config/rights.conf
@@ -17,6 +17,8 @@
 accountancy      accountize                       administrate_accountancy
 accountancy      draft_entries                    administrate_accountancy
 accountancy      index                            administrate_accountancy
+accountancy      journal_close                    close_journals
+accountancy      journal_reopen                   close_journals
 accountancy      entries_draft_dyta               consult_entries
 accountancy      entries_dyta                     consult_entries
 accountancy      account_create                   manage_accounts
@@ -47,7 +49,6 @@ accountancy      financialyears                   manage_financialyears
 accountancy      financialyears_dyta              manage_financialyears
 accountancy      financialyears_records           manage_financialyears
 accountancy      journal                          manage_journals
-accountancy      journal_close                    manage_journals
 accountancy      journal_create                   manage_journals
 accountancy      journal_delete                   manage_journals
 accountancy      journal_update                   manage_journals
